--- a/app/src/main/res/layout/activity_movie_rental.xml
+++ b/app/src/main/res/layout/activity_movie_rental.xml
@@ -15,14 +15,13 @@
             android:id="@+id/imageview_hero"
             android:layout_width="wrap_content"
             android:layout_height="200dp"
+            android:layout_marginEnd="0dp"
             android:layout_marginStart="0dp"
             android:contentDescription="@string/content_description_hero_image"
             android:fitsSystemWindows="false"
             android:scaleType="centerCrop"
             app:layout_constraintDimensionRatio="w,16:9"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/header" />
@@ -34,7 +33,7 @@
             android:layout_marginStart="0dp"
             android:contentDescription="@string/content_description_poster"
             app:layout_constraintBottom_toBottomOf="@+id/imageview_hero"
-            app:layout_constraintDimensionRatio="w,2:3"
+            app:layout_constraintDimensionRatio="w,400:576"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical_start"
             app:layout_constraintTop_toBottomOf="@+id/imageview_hero"
@@ -165,8 +164,7 @@
             app:layout_constraintStart_toEndOf="@+id/guideline_vertical_start"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical_start"
             app:layout_constraintTop_toTopOf="@+id/barrier_bottom_action_buttons"
-            app:rating="1.2"
-            tools:text="hello" />
+            app:rating="4.5"/>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab_type"
