--- a/app/src/main/res/layout/activity_movie_rental_large.xml
+++ b/app/src/main/res/layout/activity_movie_rental_large.xml
@@ -63,7 +63,7 @@
 
     <TextView
         android:id="@+id/textview_movie_details"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
