--- a/app/src/main/res/layout/activity_movie_rental_large.xml
+++ b/app/src/main/res/layout/activity_movie_rental_large.xml
@@ -14,17 +14,17 @@
     <ImageView
         android:id="@+id/imageview_hero"
         android:layout_width="wrap_content"
-        android:layout_height="200dp"
+        android:layout_height="0dp"
         android:layout_marginEnd="0dp"
         android:layout_marginStart="0dp"
         android:contentDescription="@string/content_description_hero_image"
         android:fitsSystemWindows="false"
         android:scaleType="centerCrop"
-        app:layout_constraintDimensionRatio="w,16:9"
+        app:layout_constraintDimensionRatio="16:9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/header" />
+        app:srcCompat="@drawable/singapore" />
 
     <ImageView
         android:id="@+id/imageview_poster"
