--- a/app/src/main/res/layout/chains_example_1.xml
+++ b/app/src/main/res/layout/chains_example_1.xml
@@ -12,6 +12,7 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@android:color/transparent"
         app:layout_constraintEnd_toStartOf="@+id/button_two"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintHorizontal_chainStyle="packed"
