--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="divider_gray">#eeeeee</color>
     <color name="button_blue">#3983f2</color>
     <color name="caption_text_color">#555555</color>
+    <color name="pink">#df5591</color>
 </resources>
