--- a/app/src/main/res/layout/imagefilterview.xml
+++ b/app/src/main/res/layout/imagefilterview.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,10 +7,10 @@
         android:layout_height="match_parent"
         >
 
-    <android.support.constraint.utils.ImageFilterView
+    <androidx.constraintlayout.utils.widget.ImageFilterView
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:id="@+id/imageView"
+            android:id="@+id/imageFilterView"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
@@ -89,4 +89,4 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="16dp"/>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
