--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -56,4 +56,16 @@
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/button_circular_demo"/>
 
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/buttonClStates"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/buttonImageFilterView"
+            android:text="STATES"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
