Added an example using Motion Scene Swipe Up

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#26a69a</color>
     <color name="colorPrimaryDark">#00bfa5</color>
-    <color name="colorAccent">#FF1744</color>
+    <color name="colorAccent">#B39DDB</color>
     <color name="gray_divider">#eeeeee</color>
     <color name="white">#ffffff</color>
     <color name="light_gray">#eeeeee</color>
