added flow example.

--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -80,4 +80,16 @@
             app:layout_constraintTop_toBottomOf="@+id/buttonClStates"
             android:text="MOTION SWIPE RECYCLERVIEW"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonFlow"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/buttonSwipeRecyclerView"
+        android:text="FLOW LAYOUT"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
